@@ -6,10 +6,14 @@
  2.0.3
 ----------------------------------------------------------------------
 
+ - Updated translations (ca).
  - Fixed URL grabber not filling up (xc202-fixurlg.diff).
  - Fixed crash when holding down Ctrl-I (xc202-fixdetach.diff).
  - Use Shift-Ctrl-W for Close only when Emacs key theme is enabled.
  - Fixed corrupt left margin with indent-nicks off and timestamp on.
+ - Remove invalid chars from inbound text when conversion fails. Fall
+   back to ISO-8859-1 when using UTF-8 only (Ilya Konstantinov).
+ - 
  - 
  - 
 
